# debate-arena

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  init_models.sh  pyproject.toml
.devcontainer/: devcontainer.json
backend/: Dockerfile  config.py  main.py  orchestrator.py  requirements.txt  ws_bridge.py
backend/agents/: base_agent.py  debater_agent.py  moderator_agent.py  personas.py  scout_agent.py  structured_response.py  summary_agent.py
backend/db/: connection.py  repository.py  schema.sql  sqlite_repository.py
backend/events/: types.py
backend/graph/: edges.py  graph.py  state.py
backend/graph/nodes/: intervene_node.py  moderate_node.py  plan_node.py  router_node.py  scout_node.py  speak_node.py  summary_node.py
backend/tests/: test_router_and_edges.py
backend/tools/: base.py  registry.py  web_search.py
docs/: architecture.md  contributing.md  doc.html  docs.html  events.md  index.html
docs/adr/: 001-langgraph.md  002-ws-queue.md
docs/guides/: devcontainer.md  env-example.md  git-workflow.md  pyproject-y-ruff.md
frontend/: app.js  index.html  style.css
